Fix padding on mobile devices

--- a/src/template/profitelo_theme/stylesheets/app/create-profile/create-profile.sass
+++ b/src/template/profitelo_theme/stylesheets/app/create-profile/create-profile.sass
@@ -50,7 +50,9 @@
   .bottom-row
     color: $c-primary-txt
     background-color: $c-white
-    width: calc(100% - 96px)
+    width: 100%
+    +smm
+      width: calc(100% - 96px)
     bottom: 0
     z-index: 120
     position: fixed
